--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=gigi, initial-scale=1.0">
-    <title>Document</title>
+    <title>DG&M Corporation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Raleway:wght@200;400;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/hamburger.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
-    </div>
+    <header class="header">
+        <button class="hamburger hamburger--emphatic" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
+    </header>
+
+    <footer class="footer">
+        <p class="footer__bottom-text"></p> &copy; <span class="footer__year"></span> DG&M Corporation</p>
+    </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
