--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 <span class="hamburger-inner"></span>
             </span>
         </button>
-        <nav class="nav nav-mobile">
-            <a href="#invest">Invest</a>
-            <a href="#plan">Plan</a>
-            <a href="#contact">Contact</a>
+        <nav class="nav nav-mobile nav-mobile">
+            <a class="nav__link" href="#invest">Invest</a>
+            <a class="nav__link" href="#plan">Plan</a>
+            <a class="nav__link" href="#contact">Contact</a>
         </nav>
         <nav class="nav nav-desktop">
-            <a href="#invest">Invest</a>
-            <a href="#plan">Plan</a>
-            <a href="#contact">Contact</a>
+            <a class="nav__link" href="#invest">Invest</a>
+            <a class="nav__link" href="#plan">Plan</a>
+            <a class="nav__link" href="#contact">Contact</a>
         </nav>
         <div class="header__text">
             <h1 class="company-name">Diamonds, Gold & Money</h1>
@@ -46,8 +46,8 @@
                 <img src="./img/icons/arrow-down.svg" alt="">
             </div>
         </a>
-        <img src="./img/icons/square.svg" alt="">
-        <img src="./img/icons/square.svg" alt="">
+        <img class="header__bg-icon-one" src="./img/icons/square.svg" alt="">
+        <img class="header__bg-icon-two" src="./img/icons/square.svg" alt="">
     </header>
 
     <footer class="footer">
