--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="hamburger-inner"></span>
             </span>
         </button>
-        <nav class="nav nav-mobile nav-mobile">
+        <nav class="nav nav-mobile">
             <a class="nav__link" href="#invest">Invest</a>
             <a class="nav__link" href="#plan">Plan</a>
             <a class="nav__link" href="#contact">Contact</a>
