--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
         <img class="header__bg-icon-one" src="./img/icons/square.svg" alt="">
         <img class="header__bg-icon-two" src="./img/icons/square.svg" alt="">
     </header>
-
+    <main class="main">
+        <section class="cards" id="cards">
+            <div class="wrapper">
+                <div class="cards__box">
+                    <div class="cards__card cards__card--one">
+                        <img src="./img/icons/trending-up.svg" alt="">
+                        <h3>Profit</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="cards__card cards__card--two">
+                        <img src="./img/icons/award.svg" alt="">
+                        <h3>No. 1</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="cards__card cards__card--three">
+                        <img src="./img/icons/globe.svg" alt="">
+                        <h3>Award</h3>
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <p class="footer__bottom-text"></p> &copy; <span class="footer__year"></span> DG&M Corporation</p>
     </footer>
