--- a/index.html
+++ b/index.html
@@ -71,6 +71,158 @@
                 </div>
             </div>
         </section>
+        <div class="wrapper">
+            <section class="info" id="invest">
+                <div class="info__title">
+                    <h2 class="section-title">Invest <span>smart</span></h2>
+                </div>
+                <div class="info__boxes">
+                    <div class="info__box">
+                        <img src="./img/invest-1.jpg" alt="Diamond" class="info__box-img">
+                        <h3 class="info__box-title">Diamonds</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <a href="#" class="info__box-link">Read more</a>
+                    </div>
+                    <div class="info__box">
+                        <img src="./img/invest-2.jpg" alt="Diamond" class="info__box-img">
+                        <h3 class="info__box-title">Gold</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <a href="#" class="info__box-link">Read more</a>
+                    </div>
+                    <div class="info__box">
+                        <img src="./img/invest-3.jpg" alt="Diamond" class="info__box-img">
+                        <h3 class="info__box-title">Cash</h3>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <p class="info__box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi
+                            aspernatur beatae illo quam non doloribus amet blanditiis exercitationem perspiciatis quidem
+                            accusantium sapiente inventore quisquam, repellat minima? Nihil praesentium possimus
+                            quisquam.</p>
+                        <a href="#" class="info__box-link">Read more</a>
+                    </div>
+                </div>
+                <img src="./img/icons/square.svg" alt="" class="info__bg-icon info__bg-icon--one">
+                <img src="./img/icons/square.svg" alt="" class="info__bg-icon info__bg-icon--two">
+                <img src="./img/icons/x.svg" alt="" class="info__bg-icon info__bg-icon--three">
+                <img src="./img/icons/x.svg" alt="" class="info__bg-icon info__bg-icon--four">
+            </section>
+        </div>
+        <section class="plans" id="plan">
+            <div class="wrapper">
+                <h2 class="section-title">Plan your <span>future</span></h2>
+                <div class="plans__box">
+                    <img src="./img/icons/briefcase.svg" alt="" class="plans__item plans__item-icon">
+                    <div class="plans__item plans__item-name">
+                        <h3>#easyMoney</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p class="plans__item-bold">Contribution:</p>
+                        <p>$250.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p class="plans__item-bold">Term:</p>
+                        <p>2 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p class="plans__item-bold">Profit:</p>
+                        <p>5% - 10%</p>
+                    </div>
+                </div>
+                <div class="plans__box">
+                    <img src="./img/icons/cast.svg" alt="" class="plans__item plans__item-icon">
+                    <div class="plans__item plans__item-name">
+                        <h3>reliableStuff</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p class="plans__item-bold">Contribution:</p>
+                        <p>$5.000.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p class="plans__item-bold">Term:</p>
+                        <p>5 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p class="plans__item-bold">Profit:</p>
+                        <p>20% - 30%</p>
+                    </div>
+                </div>
+                <div class="plans__box">
+                    <img src="./img/icons/film.svg" alt="" class="plans__item plans__item-icon">
+                    <div class="plans__item plans__item-name">
+                        <h3>allIn</h3>
+                    </div>
+                    <div class="plans__item plans__item-money">
+                        <p class="plans__item-bold">Contribution:</p>
+                        <p>$15.000.000</p>
+                    </div>
+                    <div class="plans__item plans__item-term">
+                        <p class="plans__item-bold">Term:</p>
+                        <p>10 - 15 years</p>
+                    </div>
+                    <div class="plans__item plans__item-profit">
+                        <p class="plans__item-bold">Profit:</p>
+                        <p>50% - 75%</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="newsletter">
+            <div class="wrapper newsletter__wrapper">
+                <div class="newsletter__text">
+                    <p>Sign up for a newsletter</p>
+                </div>
+                <div class="newsletter__form">
+                    <input type="text">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
+        <section class="gallery">
+            <div class="gallery__img"><img src="./img/gallery/1.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/2.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/3.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/4.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/5.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/6.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/7.jpg" alt="Gallery alt"></div>
+            <div class="gallery__img"><img src="./img/gallery/8.jpg" alt="Gallery alt"></div>
+        </section>
+        <section class="contact" id="contact">
+            <div class="wrapper">
+                <h2 class="section-title">Contact <span>us</span></h2>
+                <form class="contact__form">
+                    <div class="contact__form-box">
+                        <label for="name">Your name:</label>
+                        <input type="text" id="name">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="mail">Your email:</label>
+                        <input type="mail" id="mail">
+                    </div>
+                    <div class="contact__form-box">
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" cols="30" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="contact__form-btn">Send</button>
+                </form>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <p class="footer__bottom-text"></p> &copy; <span class="footer__year"></span> DG&M Corporation</p>
