--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                         <input type="text" id="name">
                     </div>
                     <div class="contact__form-box">
-                        <label for="mail">Your email:</label>
-                        <input type="mail" id="mail">
+                        <label for="email">Your email:</label>
+                        <input type="email" id="email">
                     </div>
                     <div class="contact__form-box">
                         <label for="msg">Message:</label>
