--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
             </div>
         </section>
         <section class="gallery">
-            <div class="gallery__img"><img src="./img/gallery/1.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/2.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/3.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/4.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/5.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/6.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/7.jpg" alt="Gallery alt"></div>
-            <div class="gallery__img"><img src="./img/gallery/8.jpg" alt="Gallery alt"></div>
+            <img src="./img/gallery/1.jpg" alt="Gallery alt">
+            <img src="./img/gallery/2.jpg" alt="Gallery alt">
+            <img src="./img/gallery/3.jpg" alt="Gallery alt">
+            <img src="./img/gallery/4.jpg" alt="Gallery alt">
+            <img src="./img/gallery/5.jpg" alt="Gallery alt">
+            <img src="./img/gallery/6.jpg" alt="Gallery alt">
+            <img src="./img/gallery/7.jpg" alt="Gallery alt">
+            <img src="./img/gallery/8.jpg" alt="Gallery alt">
         </section>
         <section class="contact" id="contact">
             <div class="wrapper">
