--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="cards__card cards__card--three">
                         <img src="./img/icons/globe.svg" alt="">
-                        <h3>Award</h3>
+                        <h3>Global</h3>
                         <p>Lorem ipsum dolor sit.</p>
                     </div>
                 </div>
